2009-03-19  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c:
   Update build menu items after changing anything in the
   'Set Includes and Arguments' dialog.
   Disable Compile/Run buttons/menu items when Compile/Run commands are
   set but empty.
   Reset current build directory to the base directory after reading a
   "Leaving directory" message when parsing Make output
   (closes #2694479, patch by Andrea Mazzoleni, thanks).
 * src/notebook.c:
   Fix wrong display of the filename in the tab bar menu for new files.
 * src/dialog.c:
   Set the initial directory for the Save As dialog only once on
   initialisation.
   Add a shortcut of the project's base directory to the
   File Open/Save As dialogs when a project is open for faster access.
 * src/splitwindow.c:
   Add keybindings for the split actions.


2009-03-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/search.c:
   When using Find All in the Find dialog (in Session and Document),
   display the right amount of matches.
   Fix the display of the matches once per line (I broke the original
   patch).
 * src/ui_uitls.c:
   Fix wrong directory selection behaviour in all Open Folder dialogs
   (closes #2688020, patch by Marcel Stimberg, thanks).
 * src/socket.c:
   Don't present the main window of a running instance when starting
   a second instance separately.


2009-03-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/socket.c:
   Reduce default file permissions on the Unix Domain socket file
   (reported by Jörg Sommer, thanks).


2009-03-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * doc/geany.txt, doc/geany.html, geany.glade, src/interface.c,
   src/main.c, src/plugindata.h, src/plugins.c, src/prefs.c,
   src/prefs.h:
   Add an option to set an additional plugin lookup path.
 * src/search.c:
   When using Find All in the Find dialog, display matches only once
   per line in the messages window (patch by Bert Vermeulen, thanks).

