@@ -51,7 +51,7 @@ enum {
 	 * existing fields in the plugin data types have to be changed or reordered. */
 	/* This should usually stay the same if fields are only appended, assuming only pointers to
 	 * structs and not structs themselves are declared by plugins. */
-	GEANY_ABI_VERSION = 59
+	GEANY_ABI_VERSION = 60
 };
 
 /** Check the plugin can be loaded by Geany.
